Add switch between test mode and file moving. Some refactoring. So, version 1.0?

--- a/app/src/main/res/layout/content_main_scrolling.xml
+++ b/app/src/main/res/layout/content_main_scrolling.xml
@@ -34,6 +34,20 @@
                 app:layout_anchor="@+id/app_bar"
                 app:layout_anchorGravity="right|center" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/text_margin"
+                android:text=" " />
+
+            <CheckBox
+                android:id="@+id/testModeCB"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:checked="true"
+                android:text="@string/test_only" />
+
         </LinearLayout>
 
         <View
